# stl-demo-notify

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
case-study/: aftermath_sites_2026.csv
case-study/originals/: assumptions_log.txt  demo_notification_map.html  demolition_properties_original_list.csv  doorhanger_list.csv  doorhanger_list.xlsx  field_review_list.csv  match_report.txt  site_checklists.xlsx
case-study/regenerated/: assumptions_log.txt  demo_notification_map.html  doorhanger_list.csv  doorhanger_list.xlsx  field_review_list.csv  match_report.txt  site_checklists.xlsx
data/: landuse_vocabulary.csv  sample_input.csv
docs/: index.html  map.html
src/stl_demo_notify/: analysis.py  citydata.py  cli.py  config.py  mapping.py  matching.py  outputs.py  siteinput.py
tests/: test_analysis.py  test_geometry.py  test_matching.py  test_siteinput.py
